@@ -3,6 +3,7 @@ Version 1.4.4
 -------------
 
 - sort catalogs in the manager alphabetically (#245)
+- fixes escaping of quotes in catalog headers (#290)
 
 
 Version 1.4.3
